--- a/model.ipynb
+++ b/model.ipynb
@@ -2,26 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-02T07:36:27.880094Z",
-     "start_time": "2019-09-02T07:36:25.561629Z"
+     "end_time": "2019-09-02T07:53:34.604908Z",
+     "start_time": "2019-09-02T07:52:32.833Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/lightgbm/__init__.py:46: UserWarning: Starting from version 2.2.1, the library file in distribution wheels for macOS is built by the Apple Clang (Xcode_8.3.3) compiler.\n",
-      "This means that in case of installing LightGBM from PyPI via the ``pip install lightgbm`` command, you don't need to install the gcc compiler anymore.\n",
-      "Instead of that, you need to install the OpenMP library, which is required for running LightGBM on the system with the Apple Clang compiler.\n",
-      "You can install the OpenMP library by the following command: ``brew install libomp``.\n",
-      "  \"You can install the OpenMP library by the following command: ``brew install libomp``.\", UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import gc\n",
@@ -32,16 +20,17 @@
     "\n",
     "from lightgbm import LGBMClassifier\n",
     "import optuna\n",
+    "from prunedcv import PrunedCV\n",
     "\n",
-    "from codes import utils\n",
-    "from codes import fe_browser\n",
-    "from codes import fe_emails\n",
-    "from codes import fe_cards\n",
-    "from codes import fe_date\n",
-    "from codes import fe_relatives\n",
-    "from codes import fe_categorical\n",
-    "from codes import prepro\n",
-    "from codes import fe_users"
+    "from codes.utils import import_data, drop_columns, cross_val_score_auc\n",
+    "from codes.fe_browser import latest\n",
+    "from codes.fe_emails import proton, mappings, labeling\n",
+    "from codes.fe_cards import stats\n",
+    "from codes.fe_date import dates\n",
+    "from codes.fe_relatives import divisions\n",
+    "from codes.fe_categorical import pairs, wtf\n",
+    "from codes.prepro import prepro\n",
+    "from codes.fe_users import users_stats"
    ]
   },
   {
@@ -49,8 +38,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-02T07:36:27.884534Z",
-     "start_time": "2019-09-02T07:36:27.881873Z"
+     "end_time": "2019-09-02T07:48:57.785453Z",
+     "start_time": "2019-09-02T07:48:57.782472Z"
     },
     "lines_to_next_cell": 2
    },
@@ -66,8 +55,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-02T07:36:38.103608Z",
-     "start_time": "2019-09-02T07:36:27.887633Z"
+     "end_time": "2019-09-02T07:49:03.531511Z",
+     "start_time": "2019-09-02T07:48:57.788292Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -75,7 +64,7 @@
    },
    "outputs": [],
    "source": [
-    "train, test, sample_submission = utils.import_data(DATA_PATH)"
+    "train, test, sample_submission = import_data(DATA_PATH)"
    ]
   },
   {
@@ -92,8 +81,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-02T07:37:09.194346Z",
-     "start_time": "2019-09-02T07:36:38.108745Z"
+     "end_time": "2019-09-02T07:49:30.647694Z",
+     "start_time": "2019-09-02T07:49:03.533410Z"
     }
    },
    "outputs": [
@@ -113,135 +102,29 @@
     }
    ],
    "source": [
-    "train, test = fe_users.users_stats(train, test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-09-02T07:37:12.225503Z",
-     "start_time": "2019-09-02T07:37:09.196458Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50 features are going to be dropped for being useless\n"
-     ]
-    }
-   ],
-   "source": [
-    "train, test = utils.drop_columns(train, test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-09-02T07:37:12.955723Z",
-     "start_time": "2019-09-02T07:37:12.227664Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "train, test = fe_browser.latest(train, test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-09-02T07:37:43.029823Z",
-     "start_time": "2019-09-02T07:37:12.957988Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "train, test = fe_emails.proton(train, test)\n",
+    "train, test = users_stats(train, test)\n",
+    "\n",
+    "train, test = drop_columns(train, test)\n",
+    "\n",
+    "train, test = latest(train, test)\n",
+    "\n",
+    "train, test = proton(train, test)\n",
     "\n",
     "train['nulls1'] = train.isna().sum(axis=1)\n",
     "test['nulls1'] = test.isna().sum(axis=1)\n",
     "\n",
-    "train, test = fe_emails.mappings(train, test)\n",
-    "train, test = fe_emails.labeling(train, test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-09-02T07:37:43.559948Z",
-     "start_time": "2019-09-02T07:37:43.033207Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "train, test = fe_cards.stats(train, test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-09-02T07:37:52.904918Z",
-     "start_time": "2019-09-02T07:37:43.561852Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "train, test = fe_relatives.divisions(train, test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-09-02T07:37:52.978530Z",
-     "start_time": "2019-09-02T07:37:52.906665Z"
-    },
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "train, test = fe_date.dates(train, test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-09-02T07:38:14.412609Z",
-     "start_time": "2019-09-02T07:37:52.980218Z"
-    },
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "train, test = fe_categorical.pairs(train, test)\n",
-    "train, test = fe_categorical.wtf(train, test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-09-02T07:38:23.462214Z",
-     "start_time": "2019-09-02T07:38:14.414462Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "train, test = mappings(train, test)\n",
+    "train, test = labeling(train, test)\n",
+    "\n",
+    "train, test = stats(train, test)\n",
+    "\n",
+    "train, test = divisions(train, test)\n",
+    "\n",
+    "train, test = dates(train, test)\n",
+    "\n",
+    "train, test = pairs(train, test)\n",
+    "train, test = wtf(train, test)\n",
+    "\n",
     "y_train = train['isFraud'].copy()\n",
     "\n",
     "\n",
@@ -251,7 +134,7 @@
     "del train, test\n",
     "\n",
     "#fill in mean for floats\n",
-    "X_train, X_test = prepro.prepro(X_train, X_test)"
+    "X_train, X_test = prepro(X_train, X_test)"
    ]
   },
   {
@@ -263,71 +146,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-02T07:38:23.469572Z",
-     "start_time": "2019-09-02T07:38:23.463646Z"
+     "end_time": "2019-09-02T07:56:39.000196Z",
+     "start_time": "2019-09-02T07:56:38.989401Z"
     }
    },
    "outputs": [],
    "source": [
-    "submission = sample_submission.copy()\n",
-    "submission['isFraud'] = 0"
+    "model = LGBMClassifier(metric='auc',\n",
+    "                       n_estimators=2000,\n",
+    "                       boosting_type='gbdt',\n",
+    "                       is_unbalance=True,)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-09-02T07:38:23.475296Z",
-     "start_time": "2019-09-02T07:38:23.471986Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "model = LGBMClassifier(metric='auc')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-09-02T07:38:23.484180Z",
-     "start_time": "2019-09-02T07:38:23.477776Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "prun = PrunedCV(n_fold, 0.02, minimize=False)\n",
+    "\n",
     "def objective(trial):\n",
     "    \n",
-    "    joblib.dump(study, 'study.pkl')\n",
+    "    joblib.dump(study, 'study.pkl') \n",
     "    \n",
-    "    num_leaves = trial.suggest_int('num_leaves', 2, 500) \n",
-    "    max_depth = trial.suggest_int('max_depth', 2, 300) \n",
-    "    n_estimators = trial.suggest_int('n_estimators', 100, 2000) \n",
-    "    subsample_for_bin = trial.suggest_int('subsample_for_bin', 100_000, 500_000) \n",
-    "    min_child_samples = trial.suggest_int('min_child_samples', 20, 10000) \n",
-    "    reg_alpha = trial.suggest_uniform('reg_alpha', 0.0, 2.0) \n",
-    "    colsample_bytree = trial.suggest_uniform('colsample_bytree', 0.5, 1.0) \n",
-    "    learning_rate = trial.suggest_loguniform('learning_rate', 1e-5, 1e-0)   \n",
-    "\n",
     "    params = {\n",
-    "        'num_leaves': num_leaves,\n",
-    "        'max_depth': max_depth,\n",
-    "        'n_estimators': n_estimators,\n",
-    "        'subsample_for_bin': subsample_for_bin,\n",
-    "        'min_child_samples': min_child_samples,\n",
-    "        'reg_alpha': reg_alpha,\n",
-    "        'colsample_bytree': colsample_bytree,\n",
-    "        'learning_rate': learning_rate\n",
+    "        'max_depth': trial.suggest_int('max_depth', 10, 5000), \n",
+    "        'subsample_for_bin': trial.suggest_int('subsample_for_bin', 1000, 3000000), \n",
+    "        'min_child_samples': trial.suggest_int('min_child_samples', 2, 100000), \n",
+    "        'reg_alpha': trial.suggest_loguniform('reg_alpha', 0.00000000001, 10.0),\n",
+    "        'colsample_bytree': trial.suggest_loguniform('colsample_bytree', 0.0001, 1.0),\n",
+    "        'learning_rate': trial.suggest_loguniform('learning_rate', 0.000001, 10.0)  \n",
     "    }\n",
     "    \n",
+    "    model = LGBMClassifier()\n",
     "    model.set_params(**params)\n",
     "\n",
-    "    return - utils.cross_val_score_auc(model, X_train, y_train, n_fold=N_FOLD, shuffle=False, random_state=42)"
+    "    return prun.cross_val_score(model, \n",
+    "                                X_train, \n",
+    "                                y, \n",
+    "                                metric='auc', \n",
+    "                                shuffle=True, \n",
+    "                                random_state=42)"
    ]
   },
   {
@@ -335,24 +198,22 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-02T07:38:23.491037Z",
-     "start_time": "2019-09-02T07:38:23.486303Z"
+     "end_time": "2019-09-02T07:50:50.851654Z",
+     "start_time": "2019-09-02T07:50:50.845259Z"
     }
    },
    "outputs": [],
    "source": [
     "if SEARCH_PARAMS:\n",
-    "\n",
     "    if os.path.isfile('study.pkl'):\n",
     "        study = joblib.load('study.pkl')\n",
     "    else:\n",
     "        study = optuna.create_study()\n",
-    "    study.optimize(objective, timeout=60*60*9)\n",
-    "    \n",
-    "    joblib.dump(study, 'study.pkl')\n",
-    "    \n",
-    "    params = study.best_params\n",
     "\n",
+    "    study.optimize(objective, timeout=60*60*7)\n",
+    "    joblib.dump(study, 'study.pkl')\n",
+    "    best_params = study.best_params\n",
+    "    \n",
     "else:\n",
     "    \n",
     "    params = {'num_leaves': 302,\n",
@@ -367,26 +228,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-09-02T07:39:23.132Z"
+     "end_time": "2019-09-02T07:53:34.601187Z",
+     "start_time": "2019-09-02T07:50:50.862184Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC accuracy: 0.7741935483870968, Train: 1.0\n",
+      "ROC accuracy: 1.0, Train: 0.9999999999999999\n",
+      "ROC accuracy: 1.0, Train: 1.0\n",
+      "ROC accuracy: 0.8414634146341463, Train: 1.0\n",
+      "ROC accuracy: 0.556910569105691, Train: 1.0\n",
+      "ROC accuracy: 0.9227642276422764, Train: 1.0\n",
+      "ROC accuracy: 0.983739837398374, Train: 1.0\n",
+      "ROC accuracy: 0.6178861788617886, Train: 1.0\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'datetime' has no attribute 'timestamp'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-0c48d4707c75>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m                     \u001b[0mpredict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m                     \u001b[0mX_test\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m                     submission=submission)\n\u001b[0m",
+      "\u001b[0;32m~/data/python3/ieee/codes/utils.py\u001b[0m in \u001b[0;36mcross_val_score_auc\u001b[0;34m(model, X_train, y_train, n_fold, shuffle, random_state, predict, X_test, submission, verbose)\u001b[0m\n\u001b[1;32m    123\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mpredict\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m         \u001b[0mmodel_score\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 125\u001b[0;31m         \u001b[0mtimestamp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimestamp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    126\u001b[0m         \u001b[0msubmission\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'{}_submission_{}.csv'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimestamp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_score\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'datetime' has no attribute 'timestamp'"
+     ]
+    }
+   ],
    "source": [
-    "model = LGBMClassifier(metric='auc')\n",
+    "model = LGBMClassifier(metric='auc',\n",
+    "                       n_estimators=2000,\n",
+    "                       boosting_type='gbdt',\n",
+    "                       is_unbalance=True,)\n",
+    "\n",
     "model.set_params(**params)\n",
     "\n",
-    "utils.cross_val_score_auc(model, \n",
-    "                          X_train, \n",
-    "                          y_train, \n",
-    "                          n_fold=N_FOLD, \n",
-    "                          shuffle=False, \n",
-    "                          random_state=42, \n",
-    "                          predict=True,\n",
-    "                          X_test=X_test,\n",
-    "                          submission=submission)"
+    "cross_val_score_auc(model,\n",
+    "                    X_train,\n",
+    "                    y_train,\n",
+    "                    n_fold=N_FOLD,\n",
+    "                    shuffle=False,\n",
+    "                    random_state=42,\n",
+    "                    predict=True,\n",
+    "                    X_test=X_test,\n",
+    "                    submission=submission)"
    ]
   },
   {
