--- a/model.ipynb
+++ b/model.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-02T08:00:45.243812Z",
-     "start_time": "2019-09-02T08:00:43.937473Z"
+     "end_time": "2019-09-02T10:39:00.114122Z",
+     "start_time": "2019-09-02T10:38:57.709157Z"
     }
    },
    "outputs": [
@@ -34,7 +34,7 @@
     "import optuna\n",
     "from prunedcv import PrunedCV\n",
     "\n",
-    "from codes.utils import import_data, drop_columns, cross_val_score_auc\n",
+    "from codes.utils import import_data, drop_columns, cross_val_score_auc, reduce_mem_usage\n",
     "from codes.fe_browser import latest\n",
     "from codes.fe_emails import proton, mappings, labeling\n",
     "from codes.fe_cards import stats\n",
@@ -50,8 +50,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-02T08:00:45.248925Z",
-     "start_time": "2019-09-02T08:00:45.246058Z"
+     "end_time": "2019-09-02T10:39:00.120156Z",
+     "start_time": "2019-09-02T10:39:00.116641Z"
     },
     "lines_to_next_cell": 2
    },
@@ -67,25 +67,14 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-02T08:07:21.427951Z",
-     "start_time": "2019-09-02T08:00:45.251822Z"
+     "end_time": "2019-09-02T10:39:08.685636Z",
+     "start_time": "2019-09-02T10:39:00.122537Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "training set shape: (590540, 433)\n",
-      "test set shape: (506691, 432)\n",
-      "Mem. usage decreased to 1069.77 Mb (45.8% reduction)\n",
-      "Mem. usage decreased to 918.79 Mb (45.8% reduction)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train, test, sample_submission = import_data(DATA_PATH)"
    ]
@@ -104,8 +93,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-02T08:09:13.521690Z",
-     "start_time": "2019-09-02T08:07:21.429807Z"
+     "end_time": "2019-09-02T10:41:22.551609Z",
+     "start_time": "2019-09-02T10:39:08.689259Z"
     }
    },
    "outputs": [
@@ -127,7 +116,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50 features are going to be dropped for being useless\n"
+      "50 features are going to be dropped for being useless\n",
+      "Mem. usage decreased to 1003.32 Mb (12.2% reduction)\n",
+      "Mem. usage decreased to 845.63 Mb (12.2% reduction)\n"
      ]
     }
    ],
@@ -164,7 +155,10 @@
     "del train, test\n",
     "\n",
     "#fill in mean for floats\n",
-    "X_train, X_test = prepro(X_train, X_test)"
+    "X_train, X_test = prepro(X_train, X_test)\n",
+    "\n",
+    "X_train = reduce_mem_usage(X_train)\n",
+    "X_test = reduce_mem_usage(X_test)"
    ]
   },
   {
@@ -179,8 +173,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-02T08:09:13.526888Z",
-     "start_time": "2019-09-02T08:09:13.523749Z"
+     "end_time": "2019-09-02T10:41:22.557868Z",
+     "start_time": "2019-09-02T10:41:22.553951Z"
     }
    },
    "outputs": [],
@@ -193,11 +187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-02T08:25:53.732377Z",
-     "start_time": "2019-09-02T08:25:53.725570Z"
+     "end_time": "2019-09-02T10:41:22.567551Z",
+     "start_time": "2019-09-02T10:41:22.560561Z"
     }
    },
    "outputs": [],
@@ -230,11 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-02T08:25:54.708579Z",
-     "start_time": "2019-09-02T08:25:54.702929Z"
+     "end_time": "2019-09-02T10:41:22.575467Z",
+     "start_time": "2019-09-02T10:41:22.569931Z"
     }
    },
    "outputs": [],
@@ -263,13 +257,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-09-02T08:26:04.557Z"
+     "end_time": "2019-09-02T10:41:22.587566Z",
+     "start_time": "2019-09-02T10:41:22.577689Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'boosting_type': 'gbdt',\n",
+       " 'class_weight': None,\n",
+       " 'colsample_bytree': 1.0,\n",
+       " 'importance_type': 'split',\n",
+       " 'learning_rate': 0.1,\n",
+       " 'max_depth': -1,\n",
+       " 'min_child_samples': 20,\n",
+       " 'min_child_weight': 0.001,\n",
+       " 'min_split_gain': 0.0,\n",
+       " 'n_estimators': 2000,\n",
+       " 'n_jobs': -1,\n",
+       " 'num_leaves': 31,\n",
+       " 'objective': None,\n",
+       " 'random_state': None,\n",
+       " 'reg_alpha': 0.0,\n",
+       " 'reg_lambda': 0.0,\n",
+       " 'silent': True,\n",
+       " 'subsample': 1.0,\n",
+       " 'subsample_for_bin': 200000,\n",
+       " 'subsample_freq': 0,\n",
+       " 'metric': 'auc',\n",
+       " 'is_unbalance': True}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-02T10:48:00.482212Z",
+     "start_time": "2019-09-02T10:41:22.590056Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1f0dddee1d5e47238b6e2743e3df77b1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=8), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-55b5f40a14bd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m                     \u001b[0mpredict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m                     \u001b[0mX_test\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m                     submission=sample_submission)\n\u001b[0m",
+      "\u001b[0;32m~/data/python3/ieee/codes/utils.py\u001b[0m in \u001b[0;36mcross_val_score_auc\u001b[0;34m(model, X_train, y_train, n_fold, stratify, shuffle, random_state, predict, X_test, submission, verbose)\u001b[0m\n\u001b[1;32m    107\u001b[0m         \u001b[0my_train_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_valid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtrain_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvalid_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 109\u001b[0;31m         \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    110\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m         \u001b[0mtrain_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/lightgbm/sklearn.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight, init_score, eval_set, eval_names, eval_sample_weight, eval_class_weight, eval_init_score, eval_metric, early_stopping_rounds, verbose, feature_name, categorical_feature, callbacks)\u001b[0m\n\u001b[1;32m    742\u001b[0m                                         \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeature_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeature_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    743\u001b[0m                                         \u001b[0mcategorical_feature\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcategorical_feature\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 744\u001b[0;31m                                         callbacks=callbacks)\n\u001b[0m\u001b[1;32m    745\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    746\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/lightgbm/sklearn.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight, init_score, group, eval_set, eval_names, eval_sample_weight, eval_class_weight, eval_init_score, eval_group, eval_metric, early_stopping_rounds, verbose, feature_name, categorical_feature, callbacks)\u001b[0m\n\u001b[1;32m    542\u001b[0m                               \u001b[0mverbose_eval\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeature_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeature_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    543\u001b[0m                               \u001b[0mcategorical_feature\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcategorical_feature\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 544\u001b[0;31m                               callbacks=callbacks)\n\u001b[0m\u001b[1;32m    545\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    546\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevals_result\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/lightgbm/engine.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(params, train_set, num_boost_round, valid_sets, valid_names, fobj, feval, init_model, feature_name, categorical_feature, early_stopping_rounds, evals_result, verbose_eval, learning_rates, keep_training_booster, callbacks)\u001b[0m\n\u001b[1;32m    216\u001b[0m                                     evaluation_result_list=None))\n\u001b[1;32m    217\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 218\u001b[0;31m         \u001b[0mbooster\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfobj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m         \u001b[0mevaluation_result_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/lightgbm/basic.py\u001b[0m in \u001b[0;36mupdate\u001b[0;34m(self, train_set, fobj)\u001b[0m\n\u001b[1;32m   1800\u001b[0m             _safe_call(_LIB.LGBM_BoosterUpdateOneIter(\n\u001b[1;32m   1801\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1802\u001b[0;31m                 ctypes.byref(is_finished)))\n\u001b[0m\u001b[1;32m   1803\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__is_predicted_cur_iter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;32mFalse\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__num_dataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1804\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mis_finished\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "model = LGBMClassifier(metric='auc',\n",
     "                       n_estimators=2000,\n",
@@ -282,7 +354,8 @@
     "                    X_train,\n",
     "                    y_train,\n",
     "                    n_fold=N_FOLD,\n",
-    "                    shuffle=False,\n",
+    "                    stratify=True,\n",
+    "                    shuffle=True,\n",
     "                    random_state=42,\n",
     "                    predict=True,\n",
     "                    X_test=X_test,\n",
@@ -292,9 +365,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-02T10:48:00.484666Z",
+     "start_time": "2019-09-02T10:38:57.748Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# ROC accuracy: 0.9751335550235447, Train: 0.9999994424014916\n",
+    "# ROC accuracy: 0.979350658169819, Train: 0.9999995681855991\n",
+    "# ROC accuracy: 0.978078995160897, Train: 0.9999994764541557\n",
+    "# ROC accuracy: 0.9785157994968532, Train: 0.9999991995960142\n",
+    "# ROC accuracy: 0.9763520549904333, Train: 0.999999053180651\n",
+    "# ROC accuracy: 0.9769807209581446, Train: 0.9999992919944019\n",
+    "# ROC accuracy: 0.977527478618695, Train: 0.9999993639818112\n",
+    "# ROC accuracy: 0.9786526157982463, Train: 0.9999991182307375\n",
+    "\n",
+    "# 0.9775739847770791"
+   ]
   }
  ],
  "metadata": {
