--- a/model.ipynb
+++ b/model.ipynb
@@ -165,6 +165,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
@@ -237,6 +244,16 @@
     "\n",
     "# X_train = rfe.transform(X_train)\n",
     "# X_test = rfe.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.drop('TransactionDT', axis=1, inplace=True)\n",
+    "X_test.drop('TransactionDT', axis=1, inplace=True)"
    ]
   },
   {
@@ -364,11 +381,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-06T10:03:01.759681Z",
-     "start_time": "2019-09-06T08:46:05.385419Z"
+     "end_time": "2019-09-06T11:21:00.211110Z",
+     "start_time": "2019-09-06T10:06:18.947512Z"
     },
     "scrolled": true
    },
@@ -376,7 +393,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19e3d01c46754dbf82d38f57c58cb110",
+       "model_id": "8fd8701647c64dd288e07b84a67d3bce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -391,14 +408,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC accuracy: 0.9757704571801505, Train: 0.9999958400289523\n",
-      "ROC accuracy: 0.9791133646980064, Train: 0.999994906076408\n",
-      "ROC accuracy: 0.9783987668913379, Train: 0.9999936045325654\n",
-      "ROC accuracy: 0.9793159462142405, Train: 0.9999929784959667\n",
-      "ROC accuracy: 0.9774668266992711, Train: 0.9999959246614691\n",
-      "ROC accuracy: 0.9775581312220776, Train: 0.9999953494358911\n",
-      "ROC accuracy: 0.9782097381777446, Train: 0.9999930245420584\n",
-      "ROC accuracy: 0.978625996424174, Train: 0.999994543012866\n",
+      "ROC accuracy: 0.9750555115474047, Train: 0.9999886512564585\n",
+      "ROC accuracy: 0.9785439571047838, Train: 0.999984997638542\n",
+      "ROC accuracy: 0.9771678049682662, Train: 0.9999792164501086\n",
+      "ROC accuracy: 0.9774585060473232, Train: 0.9999807818743672\n",
+      "ROC accuracy: 0.9757612669630091, Train: 0.9999815930376637\n",
+      "ROC accuracy: 0.9763278313758115, Train: 0.999986780272101\n",
+      "ROC accuracy: 0.9776690132104133, Train: 0.9999789600435759\n",
+      "ROC accuracy: 0.9770905326434537, Train: 0.9999807259658091\n",
       "\n",
       "\n"
      ]
@@ -406,10 +423,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9780574034383753"
+       "0.9768843029825582"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,16 +457,17 @@
    },
    "outputs": [],
    "source": [
-    "# ROC accuracy: 0.9751879082829373, Train: 0.9999352358261676\n",
-    "# ROC accuracy: 0.9787100821002697, Train: 0.9999107349898608\n",
-    "# ROC accuracy: 0.9778540984278778, Train: 0.9999137696701055\n",
-    "# ROC accuracy: 0.9783780060223369, Train: 0.9999091975176261\n",
-    "# ROC accuracy: 0.9761992615163245, Train: 0.999916894750745\n",
-    "# ROC accuracy: 0.9766395096557384, Train: 0.9999281378200259\n",
-    "# ROC accuracy: 0.9777909388317408, Train: 0.9999049420126224\n",
-    "# ROC accuracy: 0.9776969661329578, Train: 0.999904317276327\n",
+    "# ROC accuracy: 0.9750555115474047, Train: 0.9999886512564585\n",
+    "# ROC accuracy: 0.9785439571047838, Train: 0.999984997638542\n",
+    "# ROC accuracy: 0.9771678049682662, Train: 0.9999792164501086\n",
+    "# ROC accuracy: 0.9774585060473232, Train: 0.9999807818743672\n",
+    "# ROC accuracy: 0.9757612669630091, Train: 0.9999815930376637\n",
+    "# ROC accuracy: 0.9763278313758115, Train: 0.999986780272101\n",
+    "# ROC accuracy: 0.9776690132104133, Train: 0.9999789600435759\n",
+    "# ROC accuracy: 0.9770905326434537, Train: 0.9999807259658091\n",
     "\n",
-    "# 0.9773070963712729"
+    "\n",
+    "# 0.9768843029825582"
    ]
   }
  ],
